# TriviumDB

./: .gitignore  Cargo.toml  README.md  package.json  pyproject.toml  triviumdb.d.ts
.github/workflows/: benchmark-reports.yml  ci.yml  fault-injection.yml  fuzz.yml  release.yml
benches/: ablation_plan.md  bench_500k.rs  bench_bq_hnsw.rs  bench_dpp_graph.rs  bench_gru_graph.rs  bench_gru_router.rs  bench_lpi.rs  bench_medium.rs  bench_ppi.rs  bench_queries.rs  bench_report.md  benchmark.rs  bq_vs_brute.rs  ci_report.rs  erpc_vs_brute.rs  hnsw_vs_erpc.rs
docs/: api-reference.md  best-practices.md  erpc-convergence-proof.md  features.md  hook-guide.md  security.md  testing.md  tql-reference.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_filter_parse.rs  fuzz_query_parse.rs  fuzz_wal_parse.rs
src/: cognitive.rs  database.rs  error.rs  filter.rs  hook.rs  lib.rs  main.rs  nodejs.rs  python.rs  vector.rs
src/bindings/: mod.rs  nodejs.rs  (+1 more)
tests/: ablation.rs  aggregation_tx.rs  boundary.rs  compaction_core.rs  concurrent.rs  database_advanced.rs  deterministic.rs  emi_bitflip.rs  endian_limit.rs  engine_deep.rs  graph_algorithms.rs  hook_and_search.rs  hw_crash.rs  hw_intrusion.rs  io_fault.rs  morton.rs  oom_intercept.rs  pipeline_deep.rs  power_cycle.rs  proptest_core.rs  proptest_query.rs  recovery.rs  reverse_edge.rs  runtime_types.rs  search.rs  sector_tearing.rs  security.rs  soak.rs  stress.rs  tql_dml.rs  tql_executor.rs  tql_index.rs  tql_parser.rs  tql_phase2.rs  tql_reverse.rs  transaction.rs  unsafe_audit.rs  vector_types.rs  wal_midwrite.rs  workflow.rs
(+46 files in other folders)
